[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uvsm-substrate-history"
version = "0.4.0"
description = "Reproducible UV substrate-history (carryover) analysis utilities (no-figure release)"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "openpyxl>=3.1",
  "numpy>=1.24",
  "scipy>=1.10",
  "scikit-learn>=1.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]